--- a/estilo.css
+++ b/estilo.css
@@ -10,7 +10,7 @@
     text-decoration: none;
 }
 
-*::selection
+::selection /* *  antes dos :: */ 
 {
     background: var(--main-color);
     color: #fff;
@@ -32,10 +32,22 @@ section
     padding: 50px 10%;
 }
 
+body.active 
+{
+    --bg-color: #1e1c2a; 
+    --text-color: #fff; 
+}
+
 body
 {
     color: var(--text-color);
     background: var(--bg-color);
+}
+
+#darkmode 
+{
+    font-size: 25px;
+    cursor: pointer;
 }
 
 header
@@ -350,8 +362,7 @@ header
 /* Responsividade */ 
 
 @media (max-width: 921px) {
-    header
-    {
+    header {
         padding: 14px 41px;
     }
     :root {
@@ -369,7 +380,7 @@ header
         display: initial;
         color: var(--text-color);
     }
-    .header .navbar 
+    header .navbar 
     {
         position: absolute;
         top: -400px;
@@ -391,6 +402,13 @@ header
         padding: 1.5rem;
         display: block;
         background: var(--bg-color);
+    }
+    #darkmode 
+    {
+        position: absolute;
+        top: 1.4rem;
+        right: 2rem; 
+
     }
 }
 @media (max-width: 715px) {
